# quarkml

./: MANIFEST.in  README.md  setup.cfg  setup.py
docker/: dockerfile  entrypoint.sh  quarkml-0.0.1-py3-none-any.whl
experiment/: consistency_run.py  distributed_run.py  quarkml使用样例.ipynb  run.py  server.py
experiment/cash_x/: consistency_run.py
experiment/credit/: consistency_run.py  credit.csv  credit.csv_data_processing.csv  quarkml使用样例.ipynb  run.py
experiment/credit/encode/: candidate_features.csv  data_processing.pkl  hparams.json  iv.csv  loan_model.pkl  psi.csv  selected_feature.csv
experiment/credit/encode/psi/: age_psi.csv  checking_status_psi.csv  credit_amount_psi.csv  housing_psi.csv  (+16 more)
flask/: server.py
quarkml/: __init__.py  distributed_engineering.py  engineering.py  explore_factory.py  feature_engineering.py  model_engineering.py  utils.py
quarkml/core/: __init__.py  data_processing.py  distributed_data_processing.py  exploratory_tools.py  feature_generation.py  feature_selector.py  model_hparams.py  model_interpretable.py  model_train.py  predict_tools.py  tools.py
quarkml/evaluation_index/: __init__.py  booster.py  psi.py  tmodel.py  woe_iv.py
quarkml/generation_operation/: __init__.py  baisc_operation.py
quarkml/generator/: baisc_operation.py  booster.py  feature_generation.py
quarkml/index/: __init__.py  index_col.py  psi.py  woe_iv.py
quarkml/model/: __init__.py  balanced_mode.py  distributed_tree_model.py  model_train.py  tree_model.py
quarkml/processing/: feature_processing.py
quarkml/selector/: psi.py  tmodel.py  woe_iv.py
(+28 files in other folders)
